--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <h1>I am faizan</h1>
+
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter the place" spellcheck="false" name="" id="">
